2008-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Get the exception object from the frame.
	Language.CreateObject won't work for native language.

	* BacktraceWrapper.cs: Fixed NRE. Native methods don't have a declaring
	type.

	* Makefile:
	* Mono.Debugging.Server.Mdb.mdp: Add required ref.

	* NamespaceValueReference.cs: Use system.reflection to access to the
	mono.cecil object model. We can't use MD's Mono.Cecil here because
	the debugger is using its own copy and conflicts.

2008-11-25  Lluis Sanchez Gual  <lluis@novell.com>

	* CollectionAdaptor.cs: Add missing check. Collection adaptors are not
	implemented for non-managed languages.

2008-09-26  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Improve thread location string.

2008-09-25  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Use the gui manager to resume internally stopped
	  threads.
	* Convert.cs: Fix object conversion.
	* ObjectUtil.cs: Make GetTypeDisplayData more robust.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Updated projects.

2008-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fill the Exception property for the Exception and
	  UnhandledException events.

2008-08-29  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Fix build.

2008-08-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MyTextReader.cs, Expression.cs: Remove unused stuff.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Server.Mdb.mdp: Fix reference to Mono.TextEditor. The
	  incorrect add-in version number causes problems in the makefile
	  synchronization.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* DebuggerServer.cs: Optimize backtrace retrieval (trying to get the
	  unmanaged backtrace when the current frame is managed is slow).
	* Util.cs: Ignore properties which don't have a getter.
	* ObjectUtil.cs: Added null check.
